报名表单完成

--- a/resources/sass/h5_apps/student_registration_app.scss
+++ b/resources/sass/h5_apps/student_registration_app.scss
@@ -87,8 +87,28 @@ $defaultPadding: 15px;
 }
 
 .showMoreButton{
-  background:-webkit-linear-gradient(to right, #66D9FF, #4EA5FE);
-  background:linear-gradient(to right,#66D9FF,#4EA5FE);
-  border: none;
-  padding: 8px 40px !important;
+  background:-webkit-linear-gradient(to right, #66D9FF, #4EA5FE) !important;
+  background:linear-gradient(to right,#66D9FF,#4EA5FE) !important;
+  border: none !important;
+  padding: 8px 60px !important;
+}
+
+.el-form-item__label{
+  text-align: left !important;
+  margin-left: -10px;
+  font-size: 13px !important;
+}
+.el-input--mini .el-input__inner{
+  border:none !important;
+  text-align: right !important;
+}
+.el-form-item{
+  margin-bottom: 0 !important;
+  border-bottom: solid 1px $borderColor;
+}
+.no-border-bottom{
+  border-bottom: none;
+}
+.el-drawer.ltr, .el-drawer.rtl, .el-drawer__container {
+  overflow: scroll;
 }
