第一个完整的基本版本

--- a/resources/sass/h5_apps/student_registration_app.scss
+++ b/resources/sass/h5_apps/student_registration_app.scss
@@ -112,3 +112,6 @@ $defaultPadding: 15px;
 .el-drawer.ltr, .el-drawer.rtl, .el-drawer__container {
   overflow: scroll;
 }
+.for-mobile-alert{
+  max-width: 360px !important;
+}
