报名功能前端优化与集成

--- a/resources/sass/h5_apps/student_registration_app.scss
+++ b/resources/sass/h5_apps/student_registration_app.scss
@@ -55,10 +55,15 @@ $defaultPadding: 15px;
         }
         .major-name{
           font-size: 14px;
+          font-weight: bold;
         }
         .stat{
           color: #6F7275;
           font-size: 12px;
+          text-align: center;
+          .enrolled{
+            color: #0c83fc;
+          }
         }
         .fee{
           font-size: 12px;
