--- a/resources/sass/h5_apps/student_registration_app.scss
+++ b/resources/sass/h5_apps/student_registration_app.scss
@@ -68,6 +68,10 @@ $defaultPadding: 15px;
         .fee{
           font-size: 12px;
         }
+        .status-text{
+          color: #0c83fc;
+          font-size: 12px;
+        }
       }
     }
   }
