Update: 修复办事大厅 flows my 接口错误.

--- a/resources/sass/h5_apps/user.scss
+++ b/resources/sass/h5_apps/user.scss
@@ -2,6 +2,13 @@
 
 @import "student_registration_app";
 
+// Pipeline
+.pipeline-user-flow-box{
+  margin-bottom: 15px;
+}
+// Pipeline end
+
+
 .showMoreButton{
   background:-webkit-linear-gradient(to right, #66D9FF, #4EA5FE) !important;
   background:linear-gradient(to right,#66D9FF,#4EA5FE) !important;
