可以测试办事大厅内流程的 H5 页面了

--- a/resources/sass/h5_apps/_basic.scss
+++ b/resources/sass/h5_apps/_basic.scss
@@ -7,6 +7,7 @@ $colorSuccess: #28a745;
 $colorWarning: #ffc107;
 $colorPrimary: #007bff;
 $colorDanger: #dc3545;
+$colorLight: #e8e8e8;
 
 p{
   line-height: 1.5;
@@ -28,6 +29,10 @@ p{
 .pull-right{
   float: right;
 }
+.text-center{
+  text-align: center;
+}
+
 
 p, h1, h2, h3, h4, h5, h6, li{
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
@@ -43,4 +48,7 @@ p, h1, h2, h3, h4, h5, h6, li{
 }
 .text-danger{
   color: $colorDanger !important
+}
+.text-grey{
+  color: $colorLight !important;
 }
