--- a/resources/sass/h5_apps/user.scss
+++ b/resources/sass/h5_apps/user.scss
@@ -6,6 +6,11 @@
 .pipeline-user-flow-box{
   margin-bottom: 15px;
 }
+.user-view-flow-history-steps{
+  ul{
+    padding-left:0;
+  }
+}
 // Pipeline end
 
 
