--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,7 @@
 p, h1, h2, h3, h4, h5, h6, li{
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
+
+.must-be-top{
+  z-index: 9999 !important;
+}
