步骤中要求的必填项, 在发起的时候要正确显示, 填写后保存. 在流程结果中可见

--- a/resources/sass/h5_apps/_basic.scss
+++ b/resources/sass/h5_apps/_basic.scss
@@ -19,6 +19,12 @@ p{
 .nb{
   border: none !important;
 }
+.mb-10{
+  margin-bottom: 10px;
+}
+.mt-10{
+  margin-top: 10px;
+}
 
 .full-width{
   width: 100%;
