--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 @import "file_manager";
 @import "organization";
 @import "pipeline";
+@import "teacher_pc";
 
 p, h1, h2, h3, h4, h5, h6, li{
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
