--- a/resources/sass/teacher_pc.scss
+++ b/resources/sass/teacher_pc.scss
@@ -12,8 +12,28 @@
     height: 0;
 }
 
+.status_red {
+    color: #FD1B1B;
+}
+
+.status_green {
+    color: #6DCC58;
+}
+
+.status_yellow {
+    color: #FE7B1C;
+}
+
+.status_gray {
+    color: #ABABAB;
+}
+
+.status_black {
+    //color: black;
+}
+
 // 助手首页
-#teacher-assistant-index-app{
+#teacher-assistant-index-app {
     .card {
         width: fit-content;
     }
@@ -98,21 +118,6 @@
             width: 34px;
             height: 24px;
         }
-        .status_red {
-            color: #FD1B1B;
-        }
-        .status_green {
-            color: #6DCC58;
-        }
-        .status_yellow {
-            color: #FE7B1C;
-        }
-        .status_gray {
-            color: #ABABAB;
-        }
-        .status_black {
-            //color: black;
-        }
 
     }
     .bottom-List {
@@ -154,9 +159,12 @@
     }
 }
 
-// 签到//评分
+// 签到/评分/班级评分/学生管理
 #teacher-assistant-check-in-app,
-#teacher-assistant-evaluation-app {
+#teacher-assistant-evaluation-app,
+#teacher-assistant-grades-evaluations-app,
+#teacher-assistant-students-manager-app,
+#teacher-assistant-grades-check-in-app{
     .card {
         min-height: 700px;
     }
@@ -258,18 +266,6 @@
         border-top: 1px solid #EAEDF2;
     }
 
-    .el-table__row td:nth-child(2) {
-        color: #6DCC58;
-    }
-
-    .el-table__row td:nth-child(3) {
-        color: #FE7B1C;
-    }
-
-    .el-table__row td:nth-child(4) {
-        color: #FD1B1B;
-    }
-
     .eva_note {
         margin-top: 10px;
         min-height: 70px;
@@ -284,9 +280,99 @@
             margin-top: 5px;
         }
 
-
     }
 
 }
+
+#teacher-assistant-check-in-app {
+
+    .el-table__row td:nth-child(2) {
+        color: #6DCC58;
+    }
+
+    .el-table__row td:nth-child(3) {
+        color: #FE7B1C;
+    }
+
+    .el-table__row td:nth-child(4) {
+        color: #FD1B1B;
+    }
+
+}
+
+#teacher-assistant-grades-evaluations-app,
+#teacher-assistant-students-manager-app {
+    .el-tree-node__expand-icon {
+        display: none;
+    }
+    .el-table td {
+        text-align: left;
+        color: black;
+    }
+    .evaluations_table2 {
+        .el-table td:nth-child(2) {
+            text-align: right;
+            padding-right: 20px;
+        }
+    }
+}
+
+#teacher-assistant-students-manager-app {
+    .stu-table3 td:nth-child(1) {
+        color: #777f8d;
+    }
+    .stu-table3 td:nth-child(2) {
+        text-align: right;
+    }
+    .stu-edit {
+        width: 140px;
+        height: 38px;
+        background: #FE7C1A;
+        color: #FFF;
+    }
+    .el-dialog {
+        margin: 0;
+        margin-top: 120px;
+        margin-left: calc(100% - 800px);
+    }
+    .el-dialog__title {
+        font-weight: bold;
+    }
+    .el-dialog__body {
+        padding: 0;
+        .el-form-item{
+            font-size: 14px;
+            margin-bottom: 0;
+            padding: 5px 25px;
+            border-bottom: 1px solid #ccc;
+            color: #475B6D;
+            label {
+                margin-bottom: 0;
+                text-align: left;
+                color: #B1B7C0;
+            }
+        }
+        .can-edit {
+            color: #B1B7C0;
+            border: none;
+            label {
+                width: 130px !important;
+                color: #475B6D
+            }
+            .el-form-item__content {
+                margin-left: 130px !important;
+                padding-right: 40px;
+            }
+        }
+    }
+
+
+    .dialog-footer {
+        text-align: center;
+        padding: 20px;
+    }
+}
+
+
 
 
