--- a/resources/sass/ly/teacher_home.scss
+++ b/resources/sass/ly/teacher_home.scss
@@ -31,6 +31,7 @@
   .bottom {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     .bottom_title {
       height: 50px;
       font-size: 18px;
@@ -129,9 +130,35 @@
           text-overflow: ellipsis;
         }
       }
+      .el-drawer {
+        width: 520px;
+        height: 100%;
+        overflow-y: scroll;
+        .el-drawer__header {
+          padding: 15px 20px;
+          margin-bottom: 0;
+          font-size: 18px;
+          font-family: MicrosoftYaHei-Bold, MicrosoftYaHei;
+          font-weight: bold;
+          color: rgba(65, 74, 90, 1);
+          border-bottom: 1px solid #eaedf2;
+        }
+        .el-drawer__body {
+          .demo-drawer__content {
+            font-size: 14px;
+            font-family: MicrosoftYaHei;
+            color: rgba(51, 51, 51, 1);
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            padding: 17px 20px;
+            border-bottom: 1px solid #eaedf2;
+          }
+        }
+      }
     }
     .bottom_third {
-      width: 400px;
+      width: 450px;
       height: 740px;
       background: rgba(255, 255, 255, 1);
       border-radius: 4px;
