--- a/resources/sass/ly/teacher_oa.scss
+++ b/resources/sass/ly/teacher_oa.scss
@@ -1,15 +1,14 @@
 #teacher-oa-index-app {
   .teacher_oa_card {
-    height: 150px;
     background: rgba(255, 255, 255, 1);
     border-radius: 4px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 50px;
+    flex-wrap: wrap;
+    padding: 20px;
     .teacher_oa_card_each {
-      height: 86px;
-      padding-right: 60px;
+      padding: 0 80px;
       border-right: 1px solid #eaedf2;
       .teacher_oa_card_img {
         width: 70px;
@@ -18,7 +17,7 @@
         display: inline-block;
       }
       p {
-        font-size: 20px;
+        font-size: 17px;
         font-family: PingFangSC-Regular, PingFang SC;
         font-weight: 400;
         color: rgba(65, 74, 90, 1);
@@ -51,15 +50,38 @@
       height: 445px;
       background: rgba(255, 255, 255, 1);
       border-radius: 4px;
-      .el-tabs__nav {
+      .teacher_oa_approval_content_right_tabs {
         width: 100%;
         height: 50px;
-        font-size: 16px;
-        font-family: MicrosoftYaHei;
-        color: rgba(49, 59, 76, 1);
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+        border-bottom: 1px solid #eaedf2;
+        ul {
+          display: flex;
+          justify-content: space-around;
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          li {
+            font-size: 16px;
+            font-family: MicrosoftYaHei;
+            color: rgba(49, 59, 76, 1);
+            line-height: 50px;
+            transition: all 0.5s;
+            cursor: pointer;
+          }
+        }
+        .bgred {
+          border-bottom: 1px solid #4ea5fe;
+          color: #4ea5fe;
+        }
+      }
+      .el-input {
+        padding: 20px 44px;
+        .el-input-group__append {
+          font-size: 14px;
+          font-family: MicrosoftYaHei;
+          color: rgba(255, 255, 255, 1);
+          background-color: #4ea5fe;
+        }
       }
     }
   }
