--- a/resources/sass/ly/teacher_oa.scss
+++ b/resources/sass/ly/teacher_oa.scss
@@ -1,31 +1,29 @@
 #teacher-oa-index-app {
   .teacher_oa_card {
-    background: rgba(255, 255, 255, 1);
-    border-radius: 4px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    padding: 20px;
-    .teacher_oa_card_each {
+    border-radius: 4px;
+    padding: 20px 20px 0;
+    background: rgba(255, 255, 255, 1);
+    .teacher_oa_card_body {
       padding: 0 80px;
       border-right: 1px solid #eaedf2;
-      .teacher_oa_card_img {
+      img {
         width: 70px;
         height: 70px;
-        border: 1px solid red;
         display: inline-block;
       }
-      p {
+      dd {
         font-size: 17px;
         font-family: PingFangSC-Regular, PingFang SC;
         font-weight: 400;
         color: rgba(65, 74, 90, 1);
-        line-height: 28px;
         text-align: center;
       }
     }
-    .teacher_oa_card_each:last-child {
+    .teacher_oa_card_body:last-child {
       border: none;
     }
   }
