--- a/resources/sass/teacher_pc.scss
+++ b/resources/sass/teacher_pc.scss
@@ -27,9 +27,27 @@
 .status_gray {
     color: #ABABAB;
 }
+.status_blue {
+    color: #4EA5FE !important;
+}
 
 .status_black {
     //color: black;
+}
+
+// 无数据占位符
+.no-data-img {
+    width: 100%;
+    height: 100%;
+    img {
+        width: 160px;
+        display: block;
+        margin: 30% auto 0 auto;
+    }
+    p {
+        color: #AFACB0;
+        text-align: center;
+    }
 }
 
 // 助手首页
@@ -42,10 +60,12 @@
     }
     .banner-item {
         float: left;
-        width: 70px;
-        margin: 0 62px;
         text-align: center;
         font-size: 16px;
+    }
+    .banner-item dl {
+        margin: 0 62px;
+        float: left;
     }
     .banner-item dt {
         margin-bottom: 12px;
@@ -193,10 +213,14 @@
         height: 50px;
     }
 
-    .el-select input {
-        width: 100px;
-        border: none;
+    .search_filter {
+        .el-select input {
+            text-align: center;
+            width: 180px;
+            border: none;
+        }
     }
+
 
     .search_filter {
         float: right;
@@ -283,7 +307,16 @@
     }
 
 }
-
+#teacher-assistant-grades-check-in-app,
+#teacher-assistant-grades-evaluations-app{
+    .el-input__inner{
+        border: none;
+        text-align:center;
+    }
+    .el-input {
+        width: 180px;
+    }
+}
 #teacher-assistant-check-in-app {
 
     .el-table__row td:nth-child(2) {
@@ -333,7 +366,7 @@
     .el-dialog {
         margin: 0;
         margin-top: 120px;
-        margin-left: calc(100% - 800px);
+        margin-left: calc(100% - 670px);
     }
     .el-dialog__title {
         font-weight: bold;
@@ -370,6 +403,12 @@
     .dialog-footer {
         text-align: center;
         padding: 20px;
+    }
+}
+
+#teacher-assistant-grades-manager-app {
+    .card-body {
+        min-height: 700px;
     }
 }
 
