--- a/resources/sass/manger_ly.scss
+++ b/resources/sass/manger_ly.scss
@@ -18,4 +18,18 @@
       margin: 5px !important;
     }
   }
+  .card-body-approver {
+    width: 85%;
+    height: 120px;
+    color: #fff;
+    margin: 0 auto;
+    img {
+      width: 30px;
+      height: 30px;
+      padding-left: 10px;
+    }
+    .el-input {
+      border: none;
+    }
+  }
 }
