--- a/resources/sass/teacher_pc.scss
+++ b/resources/sass/teacher_pc.scss
@@ -27,6 +27,7 @@
 .status_gray {
     color: #ABABAB;
 }
+
 .status_blue {
     color: #4EA5FE !important;
 }
@@ -184,7 +185,7 @@
 #teacher-assistant-evaluation-app,
 #teacher-assistant-grades-evaluations-app,
 #teacher-assistant-students-manager-app,
-#teacher-assistant-grades-check-in-app{
+#teacher-assistant-grades-check-in-app {
     .card {
         min-height: 700px;
     }
@@ -220,7 +221,6 @@
             border: none;
         }
     }
-
 
     .search_filter {
         float: right;
@@ -307,16 +307,18 @@
     }
 
 }
+
 #teacher-assistant-grades-check-in-app,
-#teacher-assistant-grades-evaluations-app{
-    .el-input__inner{
+#teacher-assistant-grades-evaluations-app {
+    .el-input__inner {
         border: none;
-        text-align:center;
+        text-align: center;
     }
     .el-input {
         width: 180px;
     }
 }
+
 #teacher-assistant-check-in-app {
 
     .el-table__row td:nth-child(2) {
@@ -373,7 +375,7 @@
     }
     .el-dialog__body {
         padding: 0;
-        .el-form-item{
+        .el-form-item {
             font-size: 14px;
             margin-bottom: 0;
             padding: 5px 25px;
@@ -399,7 +401,6 @@
         }
     }
 
-
     .dialog-footer {
         text-align: center;
         padding: 20px;
@@ -411,6 +412,152 @@
         min-height: 700px;
     }
 }
+
+// 流程管理 表单
+#pipeline-flows-manager_form-app {
+    .card-body {
+        min-height: 700px;
+        padding: 0;
+    }
+    .formItem {
+        margin-top: 20px;
+        padding: 0 20px;
+        border-bottom: 1px solid #cccccc;
+        > div {
+            margin-bottom: 10px;
+        }
+    }
+    .formItemName {
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .radioItem {
+        line-height: 40px;
+        margin-bottom: 5px;
+        .el-input {
+            width: auto;
+            vertical-align: top;
+        }
+        .inline {
+            display: inline-block;
+            padding-top: 5px;
+            height: 40px;
+        }
+        .radioItemIcon {
+            font-size: 26px;
+            cursor: pointer;
+        }
+        .el-icon-remove {
+            //color: #ccc;
+        }
+        .el-icon-circle-plus {
+            color: #409eff;
+        }
+    }
+
+    .formItems {
+        padding: 20px;
+        .items {
+            float: left;
+            margin-bottom: 10px;
+            width: calc(50% - 10px);
+            height: 40px;
+            border: 1px solid #ccc;
+            text-indent: 20px;
+            line-height: 40px;
+        }
+        .itemIcon {
+            float: right;
+            margin-right: 5px;
+        }
+        .items:nth-child(2n - 1) {
+            margin-right: 20px;
+        }
+    }
+    .view {
+        padding: 10px;
+    }
+    .viewBg {
+        width: 356px;
+        height: 620px;
+        background: url("../assets/img/ios_bg.png") no-repeat 0 0/ 100% 100%;
+
+        padding: 75px 24px;
+    }
+    .viewContent {
+        width: 100%;
+        height: 100%;
+        background: #eaeef3;
+        .el-form-item {
+            margin-bottom: 5px;
+            background: white;
+        }
+        .el-form-item__label {
+            font-size: 8px !important;
+            line-height: 30px;
+            margin-bottom: 0;
+        }
+        .el-form-item__content {
+            line-height: 30px;
+        }
+        .el-input__inner {
+            border: none;
+            text-align: right;
+            height: 30px;
+            font-size: 8px !important;
+        }
+        .el-input.is-disabled .el-input__inner {
+            background: white
+        }
+        .ipt-textarea .el-input__inner {
+            height: 60px;
+        }
+        .el-input__icon {
+            line-height: 33px;
+        }
+        .el-date-editor .el-input__icon {
+            line-height: 24px;
+        }
+        .el-range-editor.is-disabled{
+            background: white;
+        }
+        .el-range-input {
+            background: white;
+        }
+        .el-date-editor .el-range-separator {
+            line-height: 23px;
+        }
+        .avatar-uploader {
+            min-height: 50px;
+        }
+        .el-upload {
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+        }
+        .nodeText {
+            white-space: pre-wrap;
+            line-height: 24px;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
