--- a/resources/sass/h5_apps/_student_registration_app.scss
+++ b/resources/sass/h5_apps/_student_registration_app.scss
@@ -2,12 +2,10 @@
   background-color: #f6f6f6;
   .main {
     .information {
-      padding: 10px 0;
       margin-bottom: 10px;
       background-color: #fff;
       h3 {
-        padding: 0 10px;
-        margin-bottom: 10px;
+        padding: 10px 10px 0;
       }
       h5 {
         font-weight: 100;
