--- a/resources/sass/manger_ly.scss
+++ b/resources/sass/manger_ly.scss
@@ -32,4 +32,10 @@
       border: none;
     }
   }
+  .el-divider--vertical {
+    height: 10em;
+    margin: 0;
+    left: 50%;
+    top: -15px;
+  }
 }
