设置审批人

--- a/resources/sass/manger_ly.scss
+++ b/resources/sass/manger_ly.scss
@@ -28,8 +28,8 @@
       height: 30px;
       padding-left: 10px;
     }
-    .el-input {
-      border: none;
+    .el-input__inner {
+      border: none !important;
     }
   }
   .el-divider--vertical {
