--- a/resources/sass/ly/teacher_home.scss
+++ b/resources/sass/ly/teacher_home.scss
@@ -62,9 +62,8 @@
         display: flex;
         padding: 20px 0 20px 10px;
         .bottom_first_content_img {
-          width: 148px;
+          width: 180px;
           height: 92px;
-          border: 1px solid red;
         }
         .bottom_first_content_right {
           width: 100%;
@@ -86,12 +85,17 @@
             text-overflow: ellipsis;
           }
           .bottom_first_content_detail {
-            width: 250px;
+            // width: 250px;
             padding-left: 14px;
+            padding-right: 14px;
             font-size: 14px;
             font-family: MicrosoftYaHei;
             color: rgba(138, 147, 161, 1);
             letter-spacing: 1px;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            overflow: hidden;
           }
           .bottom_first_content_time {
             text-align: right;
