--- a/resources/js/includes/backend/teacher-attendance_manager/index.styl
+++ b/resources/js/includes/backend/teacher-attendance_manager/index.styl
@@ -16,6 +16,21 @@
     margin-top 80px
     border-radius 10px
     margin-right 21px
+    .el-calendar__title
+      color #4EA5FE
+      font-size 18px 
+      font-weight 500
+    .el-calendar-table .el-calendar-day
+      height auto
+      padding 0
+      box-sizing border-box
+    .is-date-selected
+      background #F7F8FC
+      height 85px
+    .no-selected
+      height 85px
+    .el-tag
+      margin-right 10px
     .el-drawer__header
       padding 10px 10px 0
       margin-bottom 10px
@@ -80,3 +95,5 @@
     width 100%
     .el-button--mini
       padding 5px 12px
+
+
