--- a/resources/sass/h5_apps/_student_registration_app.scss
+++ b/resources/sass/h5_apps/_student_registration_app.scss
@@ -62,8 +62,22 @@
         padding-bottom: 10px;
       }
     }
+    .el-dialog__header {
+      padding: 10px;
+      background-color: #409eff;
+      .el-dialog__title {
+        color: #fff;
+      }
+      .el-dialog__headerbtn {
+        top: 15px;
+        .el-dialog__close {
+          color: #fff;
+        }
+      }
+    }
     .el-dialog__body {
       padding: 0 20px;
+      margin-top: 15px;
     }
   }
 }
