--- a/resources/sass/teacher_pc.scss
+++ b/resources/sass/teacher_pc.scss
@@ -4,7 +4,8 @@
   color: #777f8d;
 }
 
-.clearfix:before, .clearfix:after {
+.clearfix:before,
+.clearfix:after {
   content: "";
   display: block;
   visibility: hidden;
@@ -45,11 +46,13 @@
 .no-data-img {
   width: 100%;
   height: 100%;
+
   img {
     width: 160px;
     display: block;
     margin: 30% auto 0 auto;
   }
+
   p {
     color: #AFACB0;
     text-align: center;
@@ -61,27 +64,34 @@
   .card {
     width: fit-content;
   }
+
   .card-body {
     padding-top: 20px;
   }
+
   .banner-item {
     float: left;
     text-align: center;
     font-size: 16px;
   }
+
   .banner-item dl {
     margin: 0 62px;
     float: left;
   }
+
   .banner-item dt {
     margin-bottom: 12px;
   }
+
   .banner-item dd {
     margin-bottom: 12px;
+
     a {
       color: black;
     }
   }
+
   .bunner-line {
     float: left;
     height: 100px;
@@ -89,13 +99,16 @@
     border: none;
     border-right: 1px solid #EAEDF2;
   }
+
   .banner-item img {
     width: 70px;
     height: 70px;
   }
+
   .bottom-card {
     width: 728px;
     height: 445px;
+
     .card-head {
       height: 50px;
       line-height: 50px;
@@ -104,14 +117,17 @@
       width: 100%;
     }
   }
+
   .el-tabs__item {
     height: 50px;
     line-height: 50px;
     font-size: 16px;
   }
+
   .bottom-search {
     width: 100%;
     padding: 0 24px;
+
     .el-button {
       width: 84px;
       height: 40px;
@@ -120,9 +136,11 @@
       border-top-left-radius: 0;
       font-size: 14px;
     }
+
     .el-input {
       width: calc(100% - 84px);
       margin-right: 0;
+
       input {
         border-tadus: 3px;
         border-bottom-right-radius: 0;
@@ -130,48 +148,59 @@
       }
     }
   }
+
   .bottom-table {
     padding: 0 24px;
     font-size: 14px;
+
     .blade_listImage {
       width: 28px;
       height: 28px;
     }
+
     .el-table--striped .el-table__body tr.el-table__row--striped td {
       background: #F5F6FF;
     }
+
     .icon-image {
       width: 34px;
       height: 24px;
     }
 
   }
+
   .bottom-List {
     list-style: none;
     margin-top: 20px;
     padding: 0 24px;
+
     li {
       line-height: 64px;
       font-size: 16px;
+
       span {
         display: inline-block;
       }
+
       .blade_listImage {
         width: 28px;
         height: 28px;
         margin-right: 14px;
       }
+
       .blade_listState {
         display: inline-block;
         width: 40px;
         margin-right: 20px;
       }
+
       .blade_listUser {
         width: 160px;
         text-align: center;
         color: #99A0AD;
         margin-right: 20px;
       }
+
       .blade_listDate {
         width: 200px;
         color: #D5D7E0;
@@ -179,6 +208,7 @@
         text-align: center;
       }
     }
+
     li:nth-child(2n) {
       background: #F5F6FF;
     }
@@ -258,13 +288,12 @@
     width: calc(100% - 20px);
     border-radius: 2px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+
     .el-tree-node__expand-icon {
       display: none;
     }
 
-    .el-tree-node {
-
-    }
+    .el-tree-node {}
 
     .el-tree-node__content {
       min-height: 49px;
@@ -301,10 +330,12 @@
     border-bottom: 1px solid #CCCCCC;
     line-height: 20px;
     padding: 0 20px;
+
     .eva_noteTitle {
       color: #8A93A1;
       margin-top: 5px;
     }
+
     .eva_noteText {
       position: relative;
       max-height: 60px;
@@ -322,6 +353,7 @@
     border: none;
     text-align: center;
   }
+
   .el-input {
     width: 180px;
   }
@@ -348,10 +380,12 @@
   .el-tree-node__expand-icon {
     display: none;
   }
+
   .el-table td {
     text-align: left;
     color: black;
   }
+
   .evaluations_table2 {
     .el-table td:nth-child(2) {
       text-align: right;
@@ -364,44 +398,54 @@
   .stu-table3 td:nth-child(1) {
     color: #777f8d;
   }
+
   .stu-table3 td:nth-child(2) {
     text-align: right;
   }
+
   .stu-edit {
     width: 140px;
     height: 38px;
     background: #FE7C1A;
     color: #FFF;
   }
+
   .el-dialog {
     margin: 0;
     margin-top: 120px;
     margin-left: calc(100% - 670px);
   }
+
   .el-dialog__title {
     font-weight: bold;
   }
+
   .el-dialog__body {
     padding: 0;
+
     .el-form-item {
       font-size: 14px;
       margin-bottom: 0;
       padding: 5px 25px;
       border-bottom: 1px solid #ccc;
       color: #475B6D;
+
       label {
         margin-bottom: 0;
         text-align: left;
         color: #B1B7C0;
       }
     }
+
     .can-edit {
       color: #B1B7C0;
       border: none;
+
       label {
         width: 130px !important;
         color: #475B6D
       }
+
       .el-form-item__content {
         margin-left: 130px !important;
         padding-right: 40px;
@@ -427,37 +471,46 @@
     min-height: 700px;
     padding: 0;
   }
+
   .formItem {
     margin-top: 20px;
     padding: 0 20px;
     border-bottom: 1px solid #cccccc;
-    > div {
+
+    >div {
       margin-bottom: 10px;
     }
   }
+
   .formItemName {
     font-size: 18px;
     font-weight: bold;
   }
+
   .radioItem {
     line-height: 40px;
     margin-bottom: 5px;
+
     .el-input {
       width: auto;
       vertical-align: top;
     }
+
     .inline {
       display: inline-block;
       padding-top: 5px;
       height: 40px;
     }
+
     .radioItemIcon {
       font-size: 26px;
       cursor: pointer;
     }
+
     .el-icon-remove {
       //color: #ccc;
     }
+
     .el-icon-circle-plus {
       color: #409eff;
     }
@@ -465,6 +518,7 @@
 
   .formItems {
     padding: 20px;
+
     .items {
       float: left;
       margin-bottom: 10px;
@@ -474,17 +528,21 @@
       text-indent: 20px;
       line-height: 40px;
     }
+
     .itemIcon {
       float: right;
       margin-right: 5px;
     }
+
     .items:nth-child(2n - 1) {
       margin-right: 20px;
     }
   }
+
   .view {
     padding: 10px;
   }
+
   .viewBg {
     width: 356px;
     height: 620px;
@@ -492,70 +550,88 @@
 
     padding: 75px 24px;
   }
+
   .viewContent {
     width: 100%;
     height: 100%;
     background: #eaeef3;
     overflow-y: auto;
     overflow-x: hidden;
+
     .el-form-item {
       margin-bottom: 5px;
       background: white;
     }
+
     .el-form-item__label {
       font-size: 8px !important;
       line-height: 30px;
       margin-bottom: 0;
     }
+
     .el-form-item__content {
       line-height: 30px;
     }
+
     .el-input__inner {
       border: none;
       text-align: right;
       height: 30px;
       font-size: 8px !important;
     }
+
     .el-input.is-disabled .el-input__inner {
       background: white
     }
+
     .ipt-textarea .el-input__inner {
       height: 60px;
     }
+
     .el-input__icon {
       line-height: 33px;
     }
+
     .el-date-editor .el-input__icon {
       line-height: 24px;
     }
+
     .el-range-editor.is-disabled {
       background: white;
     }
+
     .el-range-input {
       background: white;
     }
+
     .el-date-editor .el-range-separator {
       line-height: 23px;
     }
+
     .avatar-uploader {
       min-height: 50px;
     }
+
     .el-upload {
       width: 50px;
       height: 50px;
       line-height: 50px;
     }
+
     .nodeText {
       white-space: pre-wrap;
       line-height: 24px;
     }
+
     .el-icon-close {
       cursor: pointer;
     }
   }
+
   .van-checkbox {
     margin-bottom: 5px;
   }
+
   .fromItem {
     margin-bottom: 5px;
   }
@@ -565,33 +641,14 @@
   .card-body {
     padding: 0;
   }
+
   .content-head {
     margin-bottom: 10px;
     font-size: 18px;
   }
+
   .card-content {
     border-bottom: 1px solid #ccc;
     padding: 20px 20px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
