--- a/resources/sass/ly/teacher_oa.scss
+++ b/resources/sass/ly/teacher_oa.scss
@@ -37,17 +37,58 @@
   .teacher_oa_approval_content {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     .teacher_oa_approval_content_left {
       width: 455px;
       height: 445px;
       background: rgba(255, 255, 255, 1);
       border-radius: 4px;
+      margin-bottom: 10px;
+      .name {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        span:first-child {
+          color: #313b4c;
+          font-size: 18px;
+          font-weight: bold;
+        }
+        span:last-child {
+          color: #4ea5fe;
+          font-size: 16px;
+          cursor: pointer;
+        }
+      }
+      .showFlows {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 25px 35px;
+        .itemFlows {
+          width: 60px;
+          img {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+          }
+          p {
+            font-size: 14px;
+            color: #414a5a;
+            text-align: center;
+          }
+        }
+      }
+      .el-divider--horizontal {
+        margin: 0;
+      }
     }
     .teacher_oa_approval_content_right {
       width: 940px;
       height: 445px;
       background: rgba(255, 255, 255, 1);
       border-radius: 4px;
+      margin-bottom: 10px;
       .teacher_oa_approval_content_right_tabs {
         width: 100%;
         height: 50px;
@@ -70,6 +111,21 @@
         .bgred {
           border-bottom: 1px solid #4ea5fe;
           color: #4ea5fe;
+        }
+        .bottom-table {
+          padding: 0 24px;
+          font-size: 14px;
+          .blade_listImage {
+            width: 28px;
+            height: 28px;
+          }
+          .el-table--striped .el-table__body tr.el-table__row--striped td {
+            background: #f5f6ff;
+          }
+          .icon-image {
+            width: 34px;
+            height: 24px;
+          }
         }
       }
       .el-input {
