--- a/resources/sass/ly/teacher_home.scss
+++ b/resources/sass/ly/teacher_home.scss
@@ -52,7 +52,7 @@
       justify-content: space-between;
     }
     .bottom_first {
-      width: 450px;
+      flex: 1;
       height: 727px;
       background: rgba(255, 255, 255, 1);
       border-radius: 4px;
@@ -110,8 +110,8 @@
       }
     }
     .bottom_second {
-      width: 450px;
-      margin-bottom: 10px;
+      flex: 1;
+      margin: 0 20px 10px;
       .bottom_second_calendar {
         width: 100%;
         height: 418px;
@@ -192,7 +192,7 @@
       }
     }
     .bottom_third {
-      width: 450px;
+      flex: 1;
       height: 725px;
       background: rgba(255, 255, 255, 1);
       border-radius: 4px;
