--- a/resources/sass/ly/teacher_home.scss
+++ b/resources/sass/ly/teacher_home.scss
@@ -191,6 +191,17 @@
               font-weight: 100 !important;
               text-align: center;
             }
+            .current {
+              display: inline-block;
+              width: 30px;
+              height: 30px;
+              color: #fff;
+              text-align: center;
+              line-height: 30px;
+              border-radius: 50%;
+              background-color: #4ea5fe;
+              margin-left: -5px;
+            }
           }
         }
       }
