--- a/resources/sass/teacher_pc.scss
+++ b/resources/sass/teacher_pc.scss
@@ -546,7 +546,7 @@
   .viewBg {
     width: 356px;
     height: 620px;
-    background: url("../assets/img/ios_bg.png") no-repeat 0 0/ 100% 100%;
+    background: url("smart/img/ios_bg.png")  no-repeat 0 0/ 100% 100%;
 
     padding: 75px 24px;
   }
@@ -651,4 +651,36 @@
     border-bottom: 1px solid #ccc;
     padding: 20px 20px;
   }
+  .el-upload--picture-card {
+    height: 115px;
+    line-height: 115px;
+    border-radius: 0;
+  }
+  .uploaderWrap {
+    display: inline-block;
+  }
+  .imageList {
+    position: relative;
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    width:148px;
+    height: 115px;
+    vertical-align: top;
+    box-sizing: border-box;
+    border: 1px dashed #CCCCCC;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    .el-icon-error {
+      cursor: pointer;
+      position: absolute;
+      right: -5px;
+      top: -5px;
+    }
+  }
+
+
+
 }
