--- a/resources/sass/teacher_pc.scss
+++ b/resources/sass/teacher_pc.scss
@@ -642,6 +642,9 @@
     padding: 0;
   }
 
+  .el-col-16 {
+    width: 700px;
+  }
   .content-head {
     margin-bottom: 10px;
     font-size: 18px;
