--- a/resources/sass/ly/teacher_oa.scss
+++ b/resources/sass/ly/teacher_oa.scss
@@ -86,6 +86,23 @@
       .el-divider--horizontal {
         margin: 0;
       }
+      .imgBox {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        img {
+          width: 60%;
+          height: 60%;
+          margin-left: 55px;
+        }
+        p {
+          font-size: 18px;
+          color: #d5d7e0;
+          margin-top: 10px;
+        }
+      }
     }
     .teacher_oa_approval_content_right {
       flex: 2;
