--- a/resources/sass/h5_apps/_student_registration_app.scss
+++ b/resources/sass/h5_apps/_student_registration_app.scss
@@ -20,9 +20,11 @@
           color: #6f7275;
         }
         p:nth-child(2) {
-          flex: 3;
+          flex: 2;
           color: #333333;
           text-align: right;
+          font-family: PingFangSC-Regular, PingFang SC;
+          font-weight: 400;
         }
       }
       .reason {
