--- a/resources/sass/ly/teacher_oa.scss
+++ b/resources/sass/ly/teacher_oa.scss
@@ -39,7 +39,6 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 900px;
     .teacher_oa_approval_content_left {
       flex: 1;
       min-width: 465px;
@@ -108,6 +107,7 @@
     }
     .teacher_oa_approval_content_right {
       flex: 2;
+      min-height: 300px;;
       background-color: #fff;
       border-radius: 4px;
       margin-left: 20px;
@@ -115,7 +115,7 @@
         width: 100%;
         height: 50px;
         border-bottom: 1px solid #eaedf2;
-        ul {
+        .tab {
           display: flex;
           justify-content: space-around;
           list-style: none;
@@ -136,7 +136,6 @@
         }
         .bottom-table {
           width: 100%;
-          min-height: 600px;
           .table-item {
             height: 55px;
             padding: 0 44px;
@@ -146,6 +145,10 @@
           }
           .table-item:nth-child(even){
             background-color: #F4F7FE;
+          }
+          .el-pagination {
+            float: right;
+            padding: 20px 44px;
           }
         }
       }
