--- a/resources/sass/h5_apps/_student_registration_app.scss
+++ b/resources/sass/h5_apps/_student_registration_app.scss
@@ -62,6 +62,11 @@
       }
       .el-timeline-item {
         padding-bottom: 10px;
+        .el-timeline-item__content {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
       }
     }
     .el-dialog__header {
