--- a/resources/sass/h5_apps/user.scss
+++ b/resources/sass/h5_apps/user.scss
@@ -150,6 +150,18 @@
         height: 80%;
         overflow-y: auto;
     }
+    .myFiles {
+        .van-action-sheet__content {
+            height: 100%;
+            overflow-y: auto;
+        }
+        .file-manager-wrapper {
+            margin-top: 0
+        }
+        .van-popup {
+            overflow: hidden;
+        }
+    }
     .partGroup {
         //display: flex;
         //flex-wrap: wrap;
