--- a/resources/sass/h5_apps/_student_registration_app.scss
+++ b/resources/sass/h5_apps/_student_registration_app.scss
@@ -33,6 +33,18 @@
         color: rgba(51, 51, 51, 1);
         padding: 0 15px 10px;
       }
+      .option {
+        width: 87%;
+        height: 40px;
+        line-height: 50px;
+        background: rgba(3, 133, 255, 0.05);
+        margin: 0 auto;
+        margin-bottom: 10px;
+        color: #333333;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
       .el-divider--horizontal {
         margin: 0;
       }
