--- a/resources/sass/h5_apps/_student_registration_app.scss
+++ b/resources/sass/h5_apps/_student_registration_app.scss
@@ -41,9 +41,18 @@
         margin: 0 auto;
         margin-bottom: 10px;
         color: #333333;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+        display: flex;
+        justify-content: space-between;
+        a {
+          flex: 1;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+        }
+        span {
+          cursor: pointer;
+          color: #4EA5FE;
+        }
       }
       .el-divider--horizontal {
         margin: 0;
