--- a/resources/sass/h5_apps/user.scss
+++ b/resources/sass/h5_apps/user.scss
@@ -216,6 +216,7 @@
         width: auto;
         min-width: 90px;
         max-width: 110px;
+        text-indent: 18px;
     }
     textarea.van-field__control {
         min-height: 120px;
